--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                   </div>
                   <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-left-cell u-size-20 u-layout-cell-4" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
                     <div class="u-container-layout u-valign-top u-container-layout-4">
-                      <p class="u-align-left u-text u-text-2">Realce suas curvas! A harmonização de glúteo ajuda a modelar e elevar, proporcionando um contorno perfeito e equilibrado para o seu corpo.</p>
+                      <p class="u-align-left u-text u-text-2">Realce suas curvas! A harmonização ou preenchimento de glúteo ajuda a modelar e elevar, proporcionando um contorno perfeito e equilibrado para o seu corpo.</p>
                       <a href="https://wa.me/5579996711178" target="_blank" class="u-active-grey-70 u-border-none u-btn u-btn-round u-button-style u-custom-font u-font-pt-sans u-hover-grey-70 u-palette-1-dark-3 u-radius-6 u-btn-2">Agende sua consulta!</a>
                     </div>
                   </div>
